--- a/Orco.css
+++ b/Orco.css
@@ -20,9 +20,9 @@ header{
     right: 0;
     z-index: 1000;
     background:#0c6688;
-    padding: 24px;
-    text-align: left;
-   text-indent : 18%;
+    padding: 20px;
+    /* text-align: left;
+   text-indent : 18%; */
 
 
 }
