--- a/Orco.css
+++ b/Orco.css
@@ -23,7 +23,7 @@ header{
     padding: 20px;
     text-align: left;
     text-indent :100px;
-    font-size: 14px;
+    font-size: 17px;
 
 }
 
@@ -50,10 +50,7 @@ header nav a:hover{
 
 /* @media (max-width: 1370px) { 
     header nav a.active,
-    header nav a {
-        
-
-  
+    header nav a 
 
         } } */
 
