--- a/styleT.css
+++ b/styleT.css
@@ -108,3 +108,91 @@ margin-right:270px;
 
 
   }
+
+
+  .toggle-container {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 26px;
+  }
+  
+  .toggle-checkbox {
+    display: none;
+  }
+  
+  .toggle-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 58px;
+    height: 26px;
+    border-radius: 26px;
+    background-color: #2196F3;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .toggle-text {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    font-size: 14px;
+    color: #fff;
+    user-select: none;
+  }
+  
+  
+  .toggle-container {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 20px;
+    
+  }
+  
+  .toggle-checkbox {
+    display: none;
+  }
+  
+  .toggle-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 58px;
+    height: 26px;
+    border-radius: 26px;
+    background-color:#2196F3;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+  }
+  
+  .toggle-text {
+    position: absolute;
+    top: 5px;
+    left: 20px;
+    font-size: 14px;
+    color: #fff;
+    user-select: none;
+  }
+  
+  .toggle-checkbox:checked + .toggle-label {
+    background-color: #ccc;
+
+  }
+  
+  
+  .toggle-checkbox:checked + .toggle-label ~ .toggle-text:before {
+    content: "ON";
+    display: inline;
+    cursor: pointer;
+
+  }
+  
+  .toggle-checkbox:not(:checked) + .toggle-label ~ .toggle-text:before {
+    content: "OFF";
+    display: inline;
+    cursor: pointer;
+
+  }
