--- a/Orco.css
+++ b/Orco.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     margin:0; 
     padding:0;
     box-sizing: border-box;
@@ -138,7 +138,7 @@ th, td {
 h4{
     margin-left: 40px;
 
-}
+} */
 
 /* Cacher la case à cocher native */
 
